syntax = "proto3";

service PuppetMasterService {
	rpc ReplicationFactor (ReplicationFactorRequest) returns (ReplicationFactorReply);
	rpc Partition (PartitionRequest)  returns (PartitionReply);
	rpc Status (StatusRequest) returns (StatusReply);
	rpc Crash (CrashRequest) returns (CrashReply);
	rpc Freeze (FreezeRequest) returns (FreezeReply);
	rpc Unfreeze (UnfreezeRequest) returns (UnfreezeReply);
}
message ReplicationFactorRequest {
  int32 r = 1;
}
message ReplicationFactorReply {
}

message PartitionRequest {
	string partition_name = 1;
}

message PartitionReply {
	bool ok = 1;
}

message StatusRequest {
		
}

message StatusReply {
	bool ok = 1;
}

message CrashRequest {

}

message CrashReply {
	bool ok = 1;
}

message FreezeRequest {
	
}

message FreezeReply {
	bool ok = 1;
}

message UnfreezeRequest {
}

message UnfreezeReply {
	bool ok=1;
}